# llm-context-project-pack

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
Context/Global/: Reminders.md
Context/System/: New_Chat_Start_Templates.md
docs/: Diagram.md  sanitization_checklist.md
docs/architecture/: guardrails.md  state_management.md  system_overview.md  tracking_and_reminders.md
docs/marketing/: linkedin_post.md  repo_on_resume.md  resume_and_linkedin.md
examples/: example_workflow.md  sample_project_pack_structure.md
examples/demo_outputs/: patch_preview.md  reminder_patch.md  schedule_patch.md  tracker_patch.md
examples/sample_context_files/Context/Career/Goals/: Goals_Strategy.md
examples/sample_context_files/Context/Career/Outreach/: Outreach_Rules.md
examples/sample_context_files/Context/Career/Tracking/: Job_Search_Tracker.md  Tracking_Rules.md
examples/sample_context_files/Context/Global/: Active_Schedule.md  Personal_Constraints.md
examples/sample_context_files/Context/System/: ChatGPT_Operating_Guide.md  Context_Index.md  New_Chat_Start_Templates.md
project_pack/: cli.py
scripts/: __init__.py  build_project_pack.py  bump_headers.py  validate_context.py
tests/: conftest.py  test_build_project_pack.py  test_bump_headers.py  test_validate_context.py
